Add Magazyn statistics and update functionality with new DTOs and service methods